# ChangeLog for app-cdr/cdemud
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdemud/ChangeLog,v 1.19 2011/11/22 20:34:16 tetromino Exp $

  22 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
  Add myself as maintainer.

  22 Nov 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #82110

  04 Aug 2011; Samuli Suominen <ssuominen@gentoo.org> cdemud-1.3.0.ebuild:
  Remove unnecessary sys-fs/sysfsutils depend wrt #347215 by Rafał Mużyło.

  01 Nov 2010; Peter Volkov <pva@gentoo.org> cdemud-1.3.0.ebuild:
  Unify HOMEPAGE with {g,}cdemu

*cdemud-1.3.0 (19 Oct 2010)

  19 Oct 2010; Peter Volkov <pva@gentoo.org> +cdemud-1.3.0.ebuild:
  Version bump.

  09 Feb 2010; Peter Volkov <pva@gentoo.org> files/cdemud.init.d-1.1.0:
  Remove bashism from init script, bug #303847 by Michał Górny

  01 Feb 2010; Peter Volkov <pva@gentoo.org> cdemud-1.2.0.ebuild:
  Version up vhba dependency, bug #278696, thank Henrik Stokseth for report.

  01 Feb 2010; Peter Volkov <pva@gentoo.org> -cdemud-1.1.0.ebuild,
  -cdemud-1.1.0-r1.ebuild, -files/cdemu-daemon-1.1.0-fix1.diff,
  cdemud-1.2.0.ebuild:
  amd64 stable, bug #296868. Dropped old.

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org> cdemud-1.2.0.ebuild:
  stable x86, bug 296868

*cdemud-1.2.0 (23 Oct 2009)

  23 Oct 2009; Peter Volkov <pva@gentoo.org> +cdemud-1.2.0.ebuild:
  Version bump, bug #279908, thank Fabio Cavallo for report.

  30 Mar 2009; Tiziano Müller <dev-zero@gentoo.org>
  files/cdemud.init.d-1.1.0:
  Removed bashishms from init-script.

  15 Mar 2009; Tiziano Müller <dev-zero@gentoo.org>
  files/cdemud.init.d-1.1.0:
  Forgot to remove the -d switch (bug #233904).

*cdemud-1.1.0-r1 (12 Mar 2009)

  12 Mar 2009; Tiziano Müller <dev-zero@gentoo.org>
  +files/cdemud.conf.d-1.1.0, +files/cdemud.init.d-1.1.0,
  +files/cdemu-daemon-1.1.0-fix1.diff, +cdemud-1.1.0-r1.ebuild: