@@ -1,10 +1,10 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdemud/cdemud-1.3.0.ebuild,v 1.3 2011/08/04 15:34:33 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdemud/cdemud-1.3.0.ebuild,v 1.4 2011/11/23 10:13:58 tetromino Exp $
 
 EAPI="2"
 
-DESCRIPTION="Daemon of the cdemu cd image mounting suite"
+DESCRIPTION="Daemon of the CDEmu optical media image mounting suite"
 HOMEPAGE="http://cdemu.org"
 SRC_URI="mirror://sourceforge/cdemu/cdemu-daemon-${PV}.tar.gz"
 
