@@ -1,6 +1,13 @@
 # ChangeLog for app-cdr/cdemud
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdemud/ChangeLog,v 1.19 2011/11/22 20:34:16 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdemud/ChangeLog,v 1.20 2011/11/23 10:13:58 tetromino Exp $
+
+*cdemud-1.4.0 (23 Nov 2011)
+
+  23 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org> cdemud-1.2.0.ebuild,
+  cdemud-1.3.0.ebuild, +cdemud-1.4.0.ebuild:
+  Bump, port to EAPI4, update description. Cdemud is now dbus-activated on use,
+  so an init script is no longer needed. (bug #384331)
 
   22 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
   Add myself as maintainer.
